<resources>
    <string name="app_name">Examen200123</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="messageWelcome">WELCOME BACK!</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="checkBox">Remember Me</string>
    <string name="messageQuestion">Forgot Password?</string>
    <string name="buttonLogin">LOGIN</string>
    <string name="textAccount">don´t have an account? <font color='#6200EE'><b>Sing Up</b></font></string>
    <string name="textSeparator">OR</string>

    <string name="buttonCerrarSesion">Cerrar sesion</string>


    <string name="mensaje_ingresar">Porfavor ingrese los datos correctos</string>
    <string name="preference_file_key">CustomSharedPreferences</string>
</resources>