<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginLayoutVertical"
    android:orientation="vertical"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-black"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/messageWelcome"
        android:textColor="@color/purple_500"
        android:textSize="35sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/textEmail"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/esquina_redondeada_edit_text"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/textPassword"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/esquina_redondeada_edit_text"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:text="@string/checkBox"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/messageQuestion"
            android:layout_marginEnd="0dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/buttonLogin"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/textAccount"
        android:textColor="@color/black"
        android:textSize="15sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/textSeparator"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <View
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/black"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:drawableTop="@drawable/icon_google"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:drawableTop="@drawable/icon_facebook" />

    </LinearLayout>



</LinearLayout>